# VectorDB

./: .gitignore  README.md  V-DB-01.py  pyproject.toml
Advanced RAG with Vector Databases and Retrievers/: LangChain Context Retrieval.py  LlamaIndex Retrievers.py  companypolicies.txt
Advanced RAG with Vector Databases and Retrievers/note/: 1. Vector Index Retriever.txt  2. BM25 Retriever.txt  3 Document Summary Index Retrievers.txt  4. Auto Merging Retriever.txt  5. Recursive Retriever  6. Query Fusion Retriever  6.1 Reciprocal Rank Fusion (RRF) Mode  6.2 Relative Score Fusion Mode  6.3 Distribution-Based Score Fusion Mode  note.txt
FAISS/: Semantic Similarity with FAISS.py
FAISS/note/: Understanding Semantic Search.txt
Similarity Search/: Employee Records search.py  s-01.py
chroma-db/: C-HNSW.py  C-db-01.py
food search boot/: RAG_chat_bot.py  search.py  shared_functions.py
